2004-10-06  Benoit Perrot <benoit@lrde.epita.fr>

	* monoburg.y: Rename to...
	* parser.y: This, and let automake automaticaly invoke bison to
	create `parser.c'.
	* Makefile.am: Let autoconf add the correct extension to the
	generated binary. Distribute `sample.brg' as a test.
	* config/Makefile.am: New.
	* configure.ac: New.

2004-06-24  David Waite  <mass@akuma.org>

	* monoburg.c: change to C90-style comments from C99/C++-style
	
Wed Apr 14 12:40:54 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* monoburg.c, monoburg.h, monoburg.y: changed the grammar so that
	the same emit code can be easily associated with multiple rules.
	Coalesce identical emit functions to reduce code size (10 KB - 10 % -
	with the current unchanged x86 JIT rules).

2002-10-28  Dietmar Maurer  <dietmar@ximian.com>

	* monoburg.c (emit_state): use 16bit values for registers, removed
	reg3 and spilled flag.

2002-10-17  Dietmar Maurer  <dietmar@ximian.com>

	* monoburg.y: added missing semicolon

2002-10-11  Dietmar Maurer  <dietmar@ximian.com>

	* monoburg.c (emit_tree_match): omit unnecessary compare
	(emit_label_func): make it possible to print operator names in
	error messages.

2002-10-09  Dietmar Maurer  <dietmar@ximian.com>

	* monoburg.c (check_result): emit a warning instead of an error

2002-10-03  Dietmar Maurer  <dietmar@ximian.com>

	* monoburg.c: added new %termprefix mode

2002-09-30  Dietmar Maurer  <dietmar@ximian.com>

	* monoburg.c (main): add option to specify default costs, added
	experimental code to handle several input files.

2002-09-26  Dietmar Maurer  <dietmar@ximian.com>

	* monoburg.c (emit_state): include additional fields to handle
	register allocation in dag_mode

2002-09-25  Dietmar Maurer  <dietmar@ximian.com>

	* added -p and -e options. monoburg is now able to work with DAGs.

2002-04-20  Dietmar Maurer  <dietmar@ximian.com>

	* monoburg.y (yylex): bug fix in number parsing

2002-04-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>
